[package]
name = "vieza"
version = "0.1.4"
edition = "2024"
description = "Generate vivid filetype themes that mimic eza filename colors"
license = "MIT"
repository = "https://github.com/vufly/vieza"
readme = "README.md"
keywords = ["eza", "vivid", "ls-colors", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
